--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,8 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install matplotlib
-        pip install scipy
+	pip install Levenshtein
         pip install pylint
     - name: Analysing the code with pylint
       run: |
